@@ -47,8 +47,14 @@ class czbxrpc{
 // Authentication {{{
 			if(($resource == 'user') && ($action == 'authenticate')){
 				$sessionid = null;
-				$user = CUser::get(array('users' => $params['user'], 'extendoutput' => 1, 'get_access' => 1));
-				$user = reset($user);
+				
+				$options = array(
+							'users' => $params['user'], 
+							'extendoutput' => 1, 
+							'get_access' => 1
+						);
+				$users = CUser::get($options);
+				$user = reset($users);
 				if($user['api_access'] != GROUP_API_ACCESS_ENABLED){
 					self::$result = array('error' => ZBX_API_ERROR_NO_AUTH, 'data' => 'No API access');
 					return self::$result;
@@ -60,13 +66,18 @@ class czbxrpc{
 				return self::$result;
 			}
 			else if(!empty($sessionid)){
-				if(!CUser::checkAuth(array('sessionid' => $sessionid))){
+				if(!CUser::checkAuthentication(array('sessionid' => $sessionid))){
 					self::$result = array('error' => ZBX_API_ERROR_NO_AUTH, 'data' => 'Not authorized');
 					return self::$result;
 				}
 
-				$user = CUser::get(array('userids' => $USER_DETAILS['userid'], 'extendoutput' => 1, 'get_access' => 1));
-				$user = reset($user);
+				$options = array(
+						'userids' => $USER_DETAILS['userid'], 
+						'extendoutput' => 1, 
+						'get_access' => 1
+					);
+				$users = CUser::get($options);
+				$user = reset($users);
 				if($user['api_access'] != GROUP_API_ACCESS_ENABLED){
 					self::$result = array('error' => ZBX_API_ERROR_NO_AUTH, 'data' => 'No API access');
 					return self::$result;
