@@ -123,7 +123,7 @@ include_once('include/page_header.php');
 
 			$result = true;
 			if(ZBX_AUTH_LDAP == $config['authentication_type']){
-				$result=ldap_authentication($alias,$passwd,$ldap_cnf);
+				$result = CUser::ldapLogin(array('user'=>$alias,'password'=>$passwd,'cnf'=>$ldap_cnf));
 			}
 
 // If we do save and auth_type changed, reset all sessions
@@ -152,7 +152,7 @@ include_once('include/page_header.php');
 				}
 			}
 
-			$result = ldap_authentication($alias,$passwd,$ldap_cnf);
+			$result = CUser::ldapLogin(array('user'=>$alias,'password'=>$passwd,'cnf'=>$ldap_cnf));
 
 			show_messages($result, S_LDAP.SPACE.S_LOGIN.SPACE.S_SUCCESSFUL_SMALL, S_LDAP.SPACE.S_LOGIN.SPACE.S_WAS_NOT.SPACE.S_SUCCESSFUL_SMALL);
 		}
